--- a/tests/fixtures/network_policies/output/coordination.yaml
+++ b/tests/fixtures/network_policies/output/coordination.yaml
@@ -63,6 +63,10 @@ coordination:etcd:StatefulSet:etcd-etcd:
   - podSelector:
       matchLabels:
         application: nova
+        component: placement
+  - podSelector:
+      matchLabels:
+        application: nova
         component: scheduler
   - podSelector:
       matchLabels:
